--- a/boost/examples/index.html
+++ b/boost/examples/index.html
@@ -794,7 +794,7 @@ class custom_scope {
     };
 
    public:
-    template &lt;class&gt;
+    template &lt;class...&gt;
     using is_referable = std::false_type;
 
     template &lt;class, class, class TProvider&gt;
