--- a/boost/index.html
+++ b/boost/index.html
@@ -250,7 +250,7 @@ It's better to pass required dependencies direclty instead and use a DI framewor
 
 <ul>
 <li>
-<p><strong>Not using strong typedefs for consturctor parameters</strong></p>
+<p><strong>Not using strong typedefs for constructor parameters</strong></p>
 <p>Being explicit and declarative is always better than being impilicit.
 Using common types (ex. numbers) in order to define any common-like type may cause
 missusage of the constructor interface. Using <code>strong typedefs</code> is easier to follow and
