--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@ It's better to pass required dependencies direclty instead and use a DI framewor
 
 <ul>
 <li>
-<p><strong>Not using strong typedefs for consturctor parameters</strong></p>
+<p><strong>Not using strong typedefs for constructor parameters</strong></p>
 <p>Being explicit and declarative is always better than being impilicit.
 Using common types (ex. numbers) in order to define any common-like type may cause
 missusage of the constructor interface. Using <code>strong typedefs</code> is easier to follow and
@@ -614,5 +614,5 @@ but also can help you with...</p>
 
 <!--
 MkDocs version : 0.15.3
-Build Date UTC : 2018-11-29 02:53:07.311884
+Build Date UTC : 2018-11-29 05:29:35.038058
 -->
