--- a/index.html
+++ b/index.html
@@ -185,8 +185,6 @@
 
     <section data-toggle="wy-nav-shift" class="wy-nav-content-wrap">
 
-      <a class="github-fork-ribbon left-bottom fixed" href="https://github.com/boost-experimental/di" title="Fork me on GitHub">Fork me on GitHub</a>
-
       
       <nav class="wy-nav-top" role="navigation" aria-label="top navigation">
         <i data-toggle="wy-nav-top" class="fa fa-bars"></i>
@@ -524,6 +522,7 @@ but also can help you with...</p>
 <ul>
 <li><a href="https://www.youtube.com/watch?v=IKD2-MAkXyQ">Dependency Injection</a></li>
 <li><a href="https://www.youtube.com/watch?v=RlfLCWKxHJ0">The Clean Code Talks - Don't Look For Things!</a></li>
+<li><a href="https://www.youtube.com/watch?v=8HmjM3G8jhQ">CppCon 2018: [Boost].DI - Inject all the things!</a></li>
 <li><a href="https://www.youtube.com/watch?v=comZthFv3PM">C++Now 2016: C++14 Dependency Injection Library</a> | <a href="http://boost-experimental.github.io/di/cppnow-2016">Slides</a></li>
 <li><a href="https://www.youtube.com/watch?v=T3uMcxhzRUE">Meeting C++ 2016: TDD/BDD and Dependency Injection</a> | <a href="http://boost-experimental.github.io/di/meetingcpp-2016">Slides</a></li>
 <li><a href="https://skillsmatter.com/skillscasts/9830-boost-your-design-with-c-plus-plus14-dependency-injection">Boost your design with C++14 dependency injection</a> | <a href="http://boost-experimental.github.io/di/cpp-london-2017">Slides</a></li>
@@ -608,5 +607,5 @@ but also can help you with...</p>
 
 <!--
 MkDocs version : 0.15.3
-Build Date UTC : 2019-01-06 21:14:16.679126
+Build Date UTC : 2019-01-06 22:57:20.923778
 -->
