--- a/boost/CHANGELOG/index.html
+++ b/boost/CHANGELOG/index.html
@@ -82,8 +82,7 @@
 </li>
 <li><strong>Extensions</strong><ul>
 <li><a href="http://boost-experimental.github.io/di/extensions/index.html#runtime-provider">Runtime Provider</a></li>
-<li><a href="http://boost-experimental.github.io/di/extensions/index.html#extensible-injector">Injector</a></li>
-<li><a href="http://boost-experimental.github.io/di/extensions/index.html#extensible-injector">Runtime Provider</a><blockquote></blockquote>
+<li><a href="http://boost-experimental.github.io/di/extensions/index.html#injector">Injector</a><blockquote></blockquote>
 </li>
 </ul>
 </li>
