--- a/boost/examples/index.html
+++ b/boost/examples/index.html
@@ -1278,7 +1278,7 @@ int main() {
 #include &lt;memory&gt;
 #include &lt;sstream&gt;
 
-#include &quot;common/config.hpp&quot;
+#include &quot;example/polymorphism/common/config.hpp&quot;
 
 /*&lt;&lt;Dynamic polymorphism - inheritance&gt;&gt;*/
 class Drawable {
@@ -1322,7 +1322,7 @@ int main() {
 #include &lt;sstream&gt;
 #include &lt;type_traits&gt;
 
-#include &quot;common/config.hpp&quot;
+#include &quot;example/polymorphism/common/config.hpp&quot;
 
 /*&lt;&lt;Type erasure&gt;&gt;*/
 class Drawable {
@@ -1369,7 +1369,7 @@ int main() {
 #include &lt;sstream&gt;
 #include &lt;variant&gt;
 
-#include &quot;common/config.hpp&quot;
+#include &quot;example/polymorphism/common/config.hpp&quot;
 
 struct Square {
   void draw(std::ostream&amp; out) const { out &lt;&lt; &quot;Square&quot;; }
@@ -1413,7 +1413,7 @@ int main() {
 <pre><code class="cpp">#include &lt;cassert&gt;
 #include &lt;sstream&gt;
 
-#include &quot;common/config.hpp&quot;
+#include &quot;example/polymorphism/common/config.hpp&quot;
 
 /*&lt;&lt;Static polymorphism - templates&gt;&gt;*/
 template &lt;typename TDrawable = class Drawable&gt;
@@ -1449,7 +1449,7 @@ int main() {
 <pre><code class="cpp">#include &lt;cassert&gt;
 #include &lt;sstream&gt;
 
-#include &quot;common/config.hpp&quot;
+#include &quot;example/polymorphism/common/config.hpp&quot;
 
 
 template &lt;class T&gt;
