--- a/boost/index.html
+++ b/boost/index.html
@@ -401,13 +401,17 @@ but also can help you with...</p>
 <li><a href="http://boost-experimental.github.io/di/concepts-driven-design-with-di">Concepts driven design with Dependency Injection</a></li>
 </ul>
 <h3 id="videos">Videos</h3>
+<h4 id="boostdi">[Boost].DI</h4>
 <ul>
-<li><a href="https://www.youtube.com/watch?v=IKD2-MAkXyQ">Dependency Injection</a></li>
-<li><a href="https://www.youtube.com/watch?v=RlfLCWKxHJ0">The Clean Code Talks - Don't Look For Things!</a></li>
-<li><a href="https://www.youtube.com/watch?v=8HmjM3G8jhQ">CppCon 2018: [Boost].DI - Inject all the things!</a></li>
+<li><a href="https://www.youtube.com/watch?v=8HmjM3G8jhQ">CppCon 2018: [Boost].DI - Inject all the things!</a> | <a href="https://boost-experimental.github.io/di/cppcon-2018">Slides</a></li>
 <li><a href="https://www.youtube.com/watch?v=comZthFv3PM">C++Now 2016: C++14 Dependency Injection Library</a> | <a href="http://boost-experimental.github.io/di/cppnow-2016">Slides</a></li>
 <li><a href="https://www.youtube.com/watch?v=T3uMcxhzRUE">Meeting C++ 2016: TDD/BDD and Dependency Injection</a> | <a href="http://boost-experimental.github.io/di/meetingcpp-2016">Slides</a></li>
 <li><a href="https://skillsmatter.com/skillscasts/9830-boost-your-design-with-c-plus-plus14-dependency-injection">Boost your design with C++14 dependency injection</a> | <a href="http://boost-experimental.github.io/di/cpp-london-2017">Slides</a></li>
+</ul>
+<h4 id="dependency-injection-in-general">Dependency Injection In General</h4>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=IKD2-MAkXyQ">Dependency Injection</a></li>
+<li><a href="https://www.youtube.com/watch?v=RlfLCWKxHJ0">The Clean Code Talks - Don't Look For Things!</a></li>
 <li><a href="http://www.youtube.com/watch?v=oK_XtfXPkqw">A New Type of dependency injection</a></li>
 <li><a href="https://www.youtube.com/watch?v=plK0zyRLIP8">The Future of Dependency Injection with Dagger 2</a></li>
 <li><a href="https://www.pluralsight.com/courses/design-patterns-cpp-creational">Design Patterns in C++: Creational</a></li>
