--- a/cppnow-2019/index.html
+++ b/cppnow-2019/index.html
@@ -386,7 +386,7 @@ class cppnow_talk {
 <!-- .element: class="fragment" data-fragment-index="3" -->
 
 ```cpp
-}
+};
 ```
 <!-- .element: class="fragment" data-fragment-index="1" -->
 
@@ -593,6 +593,7 @@ class cppnow_talk {
   explicit cppnow_talk(speaker);
   auto run() {
     const auto attendees = attendees{"Lenny", "Shea", ...}; // 👎
+    // ...
   }
 };
 ```
@@ -662,15 +663,13 @@ int main() {
 
 ```cpp
 class cppnow_talk {
-  speaker speaker_;                     // Tightly coupled
-  // std::shared_ptr<speaker> speaker_; // Tightly coupled
+  speaker speaker_;                     // Tightly coupled?
 ```
 <!-- .element: class="fragment" data-fragment-index="1" -->
 
 ```cpp
  public:
-  cppnow_talk() : speaker_{"Kris"} {}
-  // cppnow_talk() : speaker_{std::make_shared<speaker>("Kris")} {}
+  cppnow_talk() : speaker_{"Kris"} {}   // Tightly coupled
 ```
 <!-- .element: class="fragment" data-fragment-index="2" -->
 
@@ -686,7 +685,6 @@ class cppnow_talk {
 
 ```cpp
   cppnow_talk() : speaker_{"Kris"} {}                            // 👎
-//cppnow_talk() : speaker_{std::make_shared<speaker>("Kris")} {} // 👎
 ```
 <!-- .element: class="fragment" -->
 
@@ -754,7 +752,7 @@ class cppnow_talk {
 
 ```cpp
   auto run();
-}
+};
 ```
 <!-- .element: class="fragment" data-fragment-index="1" -->
 
@@ -779,13 +777,13 @@ explicit cppnow_talk(speaker speaker)  : speaker_{speaker} {}; // 👍
 ### Carrying dependencies with inheritance
 
 ```cpp
-class cppnow_talk : speaker {
+class cppnow_talk : speaker { // Tightly coupled to `speaker` API
 ```
 <!-- .element: class="fragment" data-fragment-index="1" -->
 
 ```cpp
  public:
-  cppnow_talk(string_view name)
+  explicit cppnow_talk(string_view name) // Common with CRTP?
    : speaker{name}
   {}
 ```
@@ -793,7 +791,7 @@ class cppnow_talk : speaker {
 
 ```cpp
   auto run();
-}
+};
 ```
 <!-- .element: class="fragment" data-fragment-index="1" -->
 
@@ -1227,6 +1225,89 @@ int main() {
 
 -----
 
+### std::variant (C++17)
+
+```cpp
+class regular_speaker { // No inheritance 👍
+ public:
+  regular_speaker(first_name, last_name);
+  void talk();
+};
+```
+<!-- .element: class="fragment" -->
+
+> Same as with Type-Erasure/Templates/Concepts!
+<!-- .element: class="fragment" -->
+
+----
+
+### std::variant (C++17)
+
+```cpp
+using SpeakerLike =
+  std::variant<regular_speaker, keynote_speaker>;
+
+using AttendeesLike =
+  std::variant<regular_attendees, awesome_attendees>;
+```
+<!-- .element: class="fragment" data-fragment-index="0" -->
+
+```cpp
+class cppnow_talk {
+```
+<!-- .element: class="fragment" data-fragment-index="1" -->
+
+```cpp
+ public:
+  cppnow_talk(SpeakerLike speaker, AttendeesLike attendees)
+    : speaker_{speaker}, attendees_{attendees}
+  { }
+```
+<!-- .element: class="fragment" data-fragment-index="2" -->
+
+```cpp
+  auto run(); // visit
+};
+```
+<!-- .element: class="fragment" data-fragment-index="1" -->
+
+----
+
+### std::variant (C++17) - Wiring
+
+```cpp
+int main() {
+```
+<!-- .element: class="fragment" data-fragment-index="1" -->
+
+```cpp
+  auto speaker =
+    regular_speaker{first_name{"Kris"}, last_name{"Jusiak"}};
+```
+<!-- .element: class="fragment" data-fragment-index="2" -->
+
+```cpp
+  auto attendees = awesome_attendees{"Lenny", "Shea", ...};
+```
+<!-- .element: class="fragment" data-fragment-index="3" -->
+
+```cpp
+  auto track = cppnow_talk{speaker, attendees};
+```
+<!-- .element: class="fragment" data-fragment-index="4" -->
+
+```cpp
+  return track.run();
+```
+<!-- .element: class="fragment" data-fragment-index="5" -->
+
+```cpp
+}
+```
+<!-- .element: class="fragment" data-fragment-index="1" -->
+
+----
+
 ### Policy Design / Design by introspection
 
 <center>
@@ -1409,89 +1490,6 @@ int main() {
 
 ----
 
-### std::variant (C++17)
-
-```cpp
-class regular_speaker { // No inheritance 👍
- public:
-  regular_speaker(first_name, last_name);
-  void talk();
-};
-```
-<!-- .element: class="fragment" -->
-
-> Same as with Type-Erasure/Templates/Concepts!
-<!-- .element: class="fragment" -->
-
-----
-
-### std::variant (C++17)
-
-```cpp
-using SpeakerLike =
-  std::variant<regular_speaker, keynote_speaker>;
-
-using AttendeesLike =
-  std::variant<regular_attendees, awesome_attendees>;
-```
-<!-- .element: class="fragment" data-fragment-index="0" -->
-
-```cpp
-class cppnow_talk {
-```
-<!-- .element: class="fragment" data-fragment-index="1" -->
-
-```cpp
- public:
-  cppnow_talk(SpeakerLike speaker, AttendeesLike attendees)
-    : speaker_{speaker}, attendees_{attendees}
-  { }
-```
-<!-- .element: class="fragment" data-fragment-index="2" -->
-
-```cpp
-  auto run(); // visit
-};
-```
-<!-- .element: class="fragment" data-fragment-index="1" -->
-
-----
-
-### std::variant (C++17) - Wiring
-
-```cpp
-int main() {
-```
-<!-- .element: class="fragment" data-fragment-index="1" -->
-
-```cpp
-  auto speaker =
-    regular_speaker{first_name{"Kris"}, last_name{"Jusiak"}};
-```
-<!-- .element: class="fragment" data-fragment-index="2" -->
-
-```cpp
-  auto attendees = awesome_attendees{"Lenny", "Shea", ...};
-```
-<!-- .element: class="fragment" data-fragment-index="3" -->
-
-```cpp
-  auto track = cppnow_talk{speaker, attendees};
-```
-<!-- .element: class="fragment" data-fragment-index="4" -->
-
-```cpp
-  return track.run();
-```
-<!-- .element: class="fragment" data-fragment-index="5" -->
-
-```cpp
-}
-```
-<!-- .element: class="fragment" data-fragment-index="1" -->
-
-----
-
 ### Let's make it testable 👌
 
 ----
@@ -1547,13 +1545,19 @@ int main() {
 
 ----
 
-### 👍 Consider using a proper abstractions for your project/module (DIP)
+### 👍 Consider using proper abstractions for your project/module (DIP)
 
-* #### templates/concepts: known at compile time dependency
+* Templates/Concepts
 <!-- .element: class="fragment" -->
-* #### type-erasure: run-time dependency
+  * Dependencies known at compile time
 <!-- .element: class="fragment" -->
-* #### inheritance: never?
+* Type-Erasure
+<!-- .element: class="fragment" -->
+  * Run-Time dependency
+<!-- .element: class="fragment" -->
+* Inheritance
+<!-- .element: class="fragment" -->
+  * Never?
 <!-- .element: class="fragment" -->
 
 ----
@@ -1622,7 +1626,7 @@ int main() {
 
 ### Wiring mess
 
-<img src="images/wiring.png" style="width: 80%; background:none; border:none; box-shadow:none;" />
+<img src="images/wiring.png" style="width: 90%; background:none; border:none; box-shadow:none;" />
 <!-- .element: class="fragment" -->
 
 * #### Boilerplate / Tedious
@@ -2036,7 +2040,7 @@ class cppnow_talk;
 
 ```cpp
 int main() {
-  // 👍 Wiring as with OO Dynamic Polymorphism
+  // 👍 The same wiring as with Dynamic Polymorphism
 
   return di::create<cppnow_talk>(injector).run();
 }
@@ -2056,8 +2060,8 @@ class cppnow_talk;
 
 ```cpp
 int main() {
-  // 👍 Wiring same as with OO Dynamic Polymorphism
-  //                        Static Polymorphism
+  // 👍 The same wiring as with Dynamic Polymorphism,
+  //                            Static Polymorphism
 
   return di::create<cppnow_talk>(injector).run();
 }
@@ -2100,9 +2104,9 @@ class cppnow_talk {
 
 ```cpp
 int main() {
-  // 👍 Wiring same as with OO Dynamic Polymorphism
-  //                        Static Polymorphism
-  //                        Concepts
+  // 👍 The same wiring as with Dynamic Polymorphism,
+  //                            Static Polymorphism,
+  //                            Concepts
 
   return di::create<cppnow_talk>(injector)();
 }
@@ -2126,10 +2130,10 @@ cppnow_talk(SpeakerLike speaker, AttendeesLike attendees);
 
 ```cpp
 int main() {
-  // 👍 Wiring same as with OO Dynamic Polymorphism
-  //                        Static Polymorphism
-  //                        Concepts
-  //                        Type-Erasure function
+  // 👍 The same wiring as with Dynamic Polymorphism,
+  //                            Static Polymorphism,
+  //                            Concepts,
+  //                            Functions
 
   return di::create<cppnow_talk>(injector).run();
 }
@@ -2151,11 +2155,11 @@ using AttendeesLike =
 
 ```cpp
 int main() {
-  // 👍 Wiring same as with OO Dynamic Polymorphism
-  //                       Static Polymorphism
-  //                       Concepts
-  //                       Type-Erasure function
-  //                       Type-Erasure
+  // 👍 The same wiring as with Dynamic Polymorphism,
+  //                            Static Polymorphism,
+  //                            Concepts,
+  //                            Functions,
+  //                            Type-Erasure
 
   return di::create<cppnow_talk>(injector).run();
 }
@@ -2224,9 +2228,9 @@ cppnow_talk2(attendees, std::unique_ptr<SpeakerLike>);
 
 ```cpp
 {
-  track0 = di::create<cppnow_talk>(injector);  // 👍 Okay
+  track0 = di::create<cppnow_talk> (injector); // 👍 Okay
   track1 = di::create<cppnow_talk1>(injector); // 👍 Okay
-  track2 = di::create<cppnow_talk2>(injector); // 👍  Okay
+  track2 = di::create<cppnow_talk2>(injector); // 👍 Okay
 }
 ```
 <!-- .element: class="fragment" data-fragment-index="2" -->
@@ -2318,7 +2322,7 @@ auto policy_injector =
 
 ```cpp
 {
-  track0 = di::create<cppnow_talk>(policy_injector);  // 👍 Okay
+  track0 = di::create<cppnow_talk> (policy_injector); // 👍 Okay
   track1 = di::create<cppnow_talk1>(policy_injector); // 👍 Okay
   track2 = di::create<cppnow_talk2>(policy_injector); // 👍 Okay
   track3 = di::create<cppnow_talk3>(policy_injector); // 👍 Okay
