--- a/boost/index.html
+++ b/boost/index.html
@@ -78,7 +78,7 @@
 <a href="https://travis-ci.org/boost-ext/di" target="_blank"><img alt="Build Status" src="https://img.shields.io/travis/boost-ext/di/cpp14.svg?label=linux/osx" /></a>
 <a href="https://ci.appveyor.com/project/boost-ext/di" target="_blank"><img alt="Build Status" src="https://img.shields.io/appveyor/ci/boost-ext/di/cpp14.svg?label=windows" /></a>
 <a href="https://codecov.io/gh/boost-ext/di" target="_blank"><img alt="Coveralls" src="https://codecov.io/gh/boost-ext/di/branch/cpp14/graph/badge.svg" /></a>
-<a href="http://github.com/boost-ext/di/issues" target="_blank"><img alt="Github Issues" src="https://img.shields.io/github/issues/boost-ext/di.svg" /></a></p>
+<a href="https://github.com/boost-ext/di/issues" target="_blank"><img alt="Github Issues" src="https://img.shields.io/github/issues/boost-ext/di.svg" /></a></p>
 <hr />
 <h1 id="introduction">Introduction</h1>
 <table>
@@ -90,7 +90,7 @@
 </thead>
 <tbody>
 <tr>
-<td>Your C++14 header only Dependency Injection library with no dependencies (<a href="http://boost-ext.github.io/di/try_it/index.html"><strong>Try it online!</strong></a>)</td>
+<td>Your C++14 header only Dependency Injection library with no dependencies (<a href="https://boost-ext.github.io/di/try_it.html"><strong>Try it online!</strong></a>)</td>
 <td><a class="github-button" href="https://github.com/boost-ext/di" data-style="mega" data-count-href="/boost-ext/di/stargazers" data-count-api="/repos/boost-ext/di#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star boost-ext/di on GitHub">GitHub</a></td>
 </tr>
 </tbody>
@@ -325,7 +325,7 @@ but also can help you with...</p>
 <ul>
 <li><a href="https://github.com/modern-cpp-examples/match3">Match-3 Game</a><ul>
 <li>Simple web game in C++14 using SDL2 / Model View Controller / Meta State Machine / Dependency Injection / Range-V3 / Emscripten<ul>
-<li><a href="http://modern-cpp-examples.github.io/match3">Play it online!</a></li>
+<li><a href="https://modern-cpp-examples.github.io/match3">Play it online!</a></li>
 </ul>
 </li>
 </ul>
@@ -340,7 +340,7 @@ but also can help you with...</p>
 </ul>
 <blockquote></blockquote>
 <ul>
-<li><a href="http://boost-ext.github.io/sml">Experimental Boost.SML</a><ul>
+<li><a href="https://boost-ext.github.io/sml">Experimental Boost.SML</a><ul>
 <li>C++14 header only Meta State Machine library with no dependencies</li>
 </ul>
 </li>
@@ -357,7 +357,7 @@ but also can help you with...</p>
 <li>[Boost].DI gives better understanding about objects hierarchy (See <a href="extensions.html#uml-dumper">UML Dumper</a>)</li>
 </ul>
 <blockquote>
-<p><a href="http://boost-ext.github.io/di/try_it/index.html"><strong>Try it online!</strong></a></p>
+<p><a href="https://boost-ext.github.io/di/try_it.html"><strong>Try it online!</strong></a></p>
 </blockquote>
 <p><img alt="CPP(BTN)" src="Run_UML_Dumper_Extension|https://raw.githubusercontent.com/boost-ext/di/cpp14/extension/test/policies/uml_dumper.cpp" />
 <img alt="CPP(BTN)" src="Run_XML_Injection_Extension|https://raw.githubusercontent.com/boost-ext/di/cpp14/extension/test/injections/xml_injection.cpp" />
@@ -376,15 +376,16 @@ but also can help you with...</p>
 <ul>
 <li><a href="http://martinfowler.com/articles/injection.html">Inversion of Control Containers and the Dependency Injection pattern</a></li>
 <li><a href="http://martinfowler.com/articles/dipInTheWild.html">DIP in the Wild</a></li>
-<li><a href="http://boost-ext.github.io/di/concepts-driven-design-with-di">Concepts driven design with Dependency Injection</a></li>
 </ul>
 <h3 id="videos">Videos</h3>
 <h4 id="boostextdi">[Boost::ext].DI</h4>
 <ul>
+<li><a href="https://www.youtube.com/watch?v=yVogS4NbL6U">C++Now 2019: Dependency Injection - a 25-dollar term for a 5-cent concept</a> | <a href="https://boost-ext.github.io/di/cppnow-2019">Slides</a></li>
 <li><a href="https://www.youtube.com/watch?v=8HmjM3G8jhQ">CppCon 2018: [Boost].DI - Inject all the things!</a> | <a href="https://boost-ext.github.io/di/cppcon-2018">Slides</a></li>
-<li><a href="https://www.youtube.com/watch?v=comZthFv3PM">C++Now 2016: C++14 Dependency Injection Library</a> | <a href="http://boost-ext.github.io/di/cppnow-2016">Slides</a></li>
-<li><a href="https://www.youtube.com/watch?v=T3uMcxhzRUE">Meeting C++ 2016: TDD/BDD and Dependency Injection</a> | <a href="http://boost-ext.github.io/di/meetingcpp-2016">Slides</a></li>
-<li><a href="https://skillsmatter.com/skillscasts/9830-boost-your-design-with-c-plus-plus14-dependency-injection">Boost your design with C++14 dependency injection</a> | <a href="http://boost-ext.github.io/di/cpp-london-2017">Slides</a></li>
+<li><a href="https://www.youtube.com/watch?v=50VIYIHlUJE">C++Now 2017: Concepts driven design with Dependency Injection</a> | <a href="https://boost-ext.github.io/di/concepts-driven-design-with-di">Slides</a></li>
+<li><a href="https://www.youtube.com/watch?v=comZthFv3PM">C++Now 2016: C++14 Dependency Injection Library</a> | <a href="https://boost-ext.github.io/di/cppnow-2016">Slides</a></li>
+<li><a href="https://www.youtube.com/watch?v=T3uMcxhzRUE">Meeting C++ 2016: TDD/BDD and Dependency Injection</a> | <a href="https://boost-ext.github.io/di/meetingcpp-2016">Slides</a></li>
+<li><a href="https://skillsmatter.com/skillscasts/9830-boost-your-design-with-c-plus-plus14-dependency-injection">Boost your design with C++14 dependency injection</a> | <a href="https://boost-ext.github.io/di/cpp-london-2017">Slides</a></li>
 </ul>
 <h4 id="dependency-injection-in-general">Dependency Injection In General</h4>
 <ul>
