--- a/boost/CHANGELOG.html
+++ b/boost/CHANGELOG.html
@@ -73,6 +73,32 @@
 
 
 <div class="section">
+<h2 id="120-2020-07-21"><a href="https://github.com/boost-ext/di/compare/v1.1.0...v1.2.0">1.2.0</a> - 2020-07-21</h2>
+<ul>
+<li><strong>Additions</strong><ul>
+<li>Support for Clang-9/Clang-10/XCode-11</li>
+<li>Support for GCC-9/10</li>
+<li>Support for MSVC-2019</li>
+<li>Support for Meson build system<blockquote></blockquote>
+</li>
+</ul>
+</li>
+<li><strong>Bug Fixes</strong><ul>
+<li><a href="https://github.com/boost-ext/di/issues?utf8=%E2%9C%93&amp;q=is%3Aissue+is%3Aclosed+closed%3A2019-01-07..2020-07-21+">Issues</a><blockquote></blockquote>
+</li>
+</ul>
+</li>
+<li><strong>Contributions</strong><ul>
+<li><a href="https://github.com/kanstantsin-chernik">Kanstantsin Chernik</a></li>
+<li><a href="Reza Housseini">Reza Housseini</a></li>
+<li><a href="https://github.com/pck">Paul Kunysch</a></li>
+<li><a href="https://github.com/jamespharvey20">James P. Harvey</a></li>
+<li><a href="https://github.com/abelfodil">Anes Belfodil</a></li>
+<li><a href="https://github.com/Alexey-Bogomolov">Alexey-Bogomolov</a></li>
+<li><a href="https://github.com/mlimber">mlimber</a></li>
+</ul>
+</li>
+</ul>
 <h2 id="110-2019-01-07"><a href="https://github.com/boost-ext/di/compare/v1.0.2...v1.1.0">1.1.0</a> - 2019-01-07</h2>
 <ul>
 <li><strong>Additions</strong><ul>
